--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.1.5",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
