--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.5",
+    "@prisma/client": "^5.15.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
@@ -27,6 +28,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
+    "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -45,6 +47,7 @@
     "husky": "^8.0.0",
     "postcss": "^8",
     "prettier": "^3.3.2",
+    "prisma": "^5.15.0",
     "standard-version": "^9.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
